# nepher-subnet

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: common_config.yaml  docker.env.example  miner_config.example.yaml  validator_config.example.yaml
docker/: Dockerfile.miner  Dockerfile.sandbox  Dockerfile.validator  Dockerfile.validator-cpu  entrypoint-sandbox.sh  entrypoint-sandbox_orign.sh  entrypoint.sh  sni-proxy.py  squid-whitelist.conf
docs/: cpu-gpu-split.md  evaluation-env-error-investigation.md  incentive_mechanism.md  miner-guide.md  validator-guide.md
miner/: __init__.py  __main__.py  submit.py
nepher_core/: __init__.py
nepher_core/api/: __init__.py  client.py  exceptions.py  models.py
nepher_core/config/: __init__.py  loader.py  models.py
nepher_core/utils/: __init__.py  helpers.py  logging.py
nepher_core/wallet/: __init__.py  utils.py
scripts/: health_check.py  local_eval.sh  start_miner.sh  start_validator.sh  test_evaluation_submit.py
tests/: __init__.py  test_api_client.py  test_config_loader.py  test_helpers.py
validator/: __init__.py  __main__.py  main.py  state.py
validator/evaluation/: __init__.py  agent_evaluator.py  orchestrator.py  sandbox.py
validator/reward/: __init__.py  weight_setter.py
validator/settlement/: __init__.py  weight_setter.py
validator/setup/: __init__.py  installer.py
